--- a/src/global-css/global.css
+++ b/src/global-css/global.css
@@ -92,6 +92,10 @@ aside{
     display: none;
 }
 
+.navbar > .command:first-of-type::before{
+    content: "./";
+}
+
 .navbar:hover{
     button{
         display: block;
@@ -146,10 +150,10 @@ ul:hover{
     background-color: var(--terminal);
 }
 
-li{
+li.command{
     list-style:none;
     cursor: pointer;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     padding: 3px;
     transition: 0.2s;
 }
@@ -281,71 +285,4 @@ section >div >div:nth-child(2n){
 
 section >div >div:nth-child(2n-1){
     margin-bottom: 10px;
-}
-
-@media screen and (max-width:900px){
-   
-    ul{
-        text-align: start;
-        padding: 5px;
-        transition: 0.2s;
-        border: 1px solid grey;
-        border-radius: 5px;
-        background-color: rgb(20,20,20);
-    }
-
-
-    li:hover{
-        border: 1px solid grey;
-        text-align: start;
-        padding: 2px;
-    }
-
-    li:active{
-        border: 1px solid grey;
-        text-align: start;
-        padding: 2px;
-        background-color: rgba(30,30,30);
-    }
-
-    li::marker{
-        content: '_';
-        color: rebeccapurple;
-        list-style-position: inside;
-    }
-
-    li:hover::marker{
-        content: "$cd  ./";
-    }
-
-    li:active::marker{
-        content: "$cd  ./";
-    }
-
-    li:hover::after{
-        content: "|";
-        animation: flick 0.7s infinite; ;
-    }
-
-    li:active::after{
-        content: "|";
-        animation: flick 0.7s infinite; ;
-    }
-
-    li:hover:last-of-type{
-        color: red;
-    }
-
-    li:active:last-of-type{
-        color: red;
-    }
-
-    li:hover:last-of-type::marker{
-        content: "$" ;
-    }
-
-    li:active:last-of-type::marker{
-        content: "$" ;
-    }
-
 }
