--- a/src/global-css/global.css
+++ b/src/global-css/global.css
@@ -51,6 +51,7 @@ aside{
     padding: 5px 15px;
     gap: 15px;
     width: 100%;
+    z-index: 1;
 }
 
 .command{
@@ -108,10 +109,8 @@ aside{
     flex-grow: 1;
 }
 
-#content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+section{
+    max-width: 85ch;
 }
 
 h1{
@@ -136,34 +135,6 @@ h1::before{
 h1::after{
     content: "|";
     animation: var(--cursor-flicker);
-}
-
-ul{
-    text-align: center;
-    padding: 6px;
-    transition: 0.2s;
-}
-
-ul:hover{
-    border:var(--terminal-border);
-    border-radius: 5px;
-    background-color: var(--terminal);
-}
-
-li.command{
-    list-style:none;
-    cursor: pointer;
-    font-size: 1.1rem;
-    padding: 3px;
-    transition: 0.2s;
-}
-
-li:hover:last-of-type{
-    color: var(--danger);
-}
-
-li:hover:last-of-type::before{
-    content: "$" ;
 }
 
 .blob-filter{
@@ -226,63 +197,13 @@ li:hover:last-of-type::before{
 
 main{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    padding: 30px;
-}
-
-section{
-    color: white;
-    max-width: 85ch;
-}
-
-section p{
-    font-family: monospace;
-    font-size: 1.3rem;
-}
-
-section >div{
-    padding:30px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-}
-
-section>  div> div{
-    height: 250px;
-    width: 8%;
-    border: 1px solid white;
-    transition: 0.2s;
-    cursor: pointer;
-    flex-shrink: 1;
-    text-align: center;
-    font-weight: bold;
-    font-family: monospace;
-    font-size: 1.2rem;
-}
-
-section>  div> div:hover{
-    border: none;
-    background-color: wheat;
-    filter: drop-shadow(0px 0px 30px white);
-    transform: scale(1.1);
-    color: black;
-    width: 100%;
-}
-
-section>  div> div:active{
-    border:none;
-    background-color: lightcoral;
-    filter: drop-shadow(0px 0px 30px red);
-    transform: scale(1.1);
 }
 
 
-section >div >div:nth-child(2n){
-    margin-top: 10px;
-    
-}
 
-section >div >div:nth-child(2n-1){
-    margin-bottom: 10px;
+.display{
+    display: grid;
+    grid-template-columns: repeat(auto-fill,minmax(150px,1fr));
 }
